[package]
name = "rshell"
version = "0.1.0"
authors = ["zy <admin@editso.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode =  "1.3.3"
smol = "1.2.5"